test-executor-app/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: jenkins
    serviceloadbalancer/lb.host: jenkins.test-runner.prsn-dev.io
  name: jenkins
  namespace: test-runner
  selfLink: /api/v1/namespaces/test-runner/services/jenkins
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    name: jenkins
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: apt
  name: apt
  namespace: test-runner
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: jenkins
