test-executor-app/jenkins-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: test-runner
  labels:
    ssl: "false"
spec:
  rules:
  - host: jenkins.test-runner.prsn-dev.io
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 80
        path: /
